update build system, use java 21